made a help.hbs page for empty form

--- a/public/help.html
+++ b/public/help.html
@@ -5,10 +5,9 @@
     <title>Help! Page</title>
   </head>
   <body>
-    <h1>Help! Page</h1>
+    <h1>Something went wrong...</h1>
     <p>
-      There is lots of good info here.
-      Or will be here once I sort it all out.
+      You have made an error. Most likey, you have not entered a city. Please, go back to <a href="/">the home page</a> and enter a city.
     </p>
     <p>
       Stay tuned!
